--- a/src/index.css
+++ b/src/index.css
@@ -1,73 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: #ffffff;
+  /* background-color: #242424; */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --bgImg: linear-gradient(to right top,#ff2901,#d9004a,#9a1862,#562a5a,#262335);
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.navbar-scroll {
+  height: 60px;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+.hero {
+  background: url("./assets/hero.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation: bgImage 300s linear infinite;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.btn, .line{
+  background-image: var(--bgImg); ;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@media screen and (min-width: 375px) {
+  .btn {
+    background: transparent;
+    padding: 0;
   }
-  a:hover {
-    color: #747bff;
+  .form-case {
+    background-image: linear-gradient(to right top,#ff2901,#d9004a,#9a1862,#562a5a,#262335);
   }
-  button {
-    background-color: #f9f9f9;
+}
+
+@media screen and (min-width: 500px) {
+  .cards{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 850px) {
+  .cards{
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@keyframes bgImage {
+  0% {
+    background-position: top;
+  } 
+  25% {
+    background-position: 50%;
+  }
+  50% {
+    background-position: bottom;
+  }
+  75% {
+    background-position: 50%;
+  }
+  100% {
+    background-position: top;
   }
 }
